# brpc

./: .asf.yaml  .bazelignore  .bazelrc  .clang-format  .gitignore  .licenserc.yaml  .travis.yml  AGENTS.md  BUILD  BUILD.bazel  CHANGES.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMAKE  CONTRIBUTING.md  DISCLAIMER  DISCLAIMER-WIP  Disclaimer  Dockerfile  LICENSE  MODULE.bazel  Makefile  NOTICE  README  README.md  README_cn.md  RELEASE_VERSION  SECURITY.md  THREAT_MODEL.md  WORKSPACE  WORKSPACE.bzlmod  baidu_std.lua  brpc_proposal.md  build.sh  build_in_travis_ci.sh  compile_proto.py  config.h.in  config.mk  config_brpc.sh  (+9 more)
bazel/: BUILD.bazel  README_bazel_build.md  brpc.bzl  workspace.bzl
bazel/config/: BUILD.bazel
bazel/tools/: BUILD.bazel  brpc_proto_library.bzl  proto_gen.bzl
example/: BUILD  BUILD.bazel  CMakeLists.txt
example/asynchronous_echo_c++/: CMakeLists.txt  Makefile  client.cpp  echo.proto  server.cpp
example/auto_concurrency_limiter/: CMakeLists.txt  cl_test.proto  client.cpp  dummy_server.port  server.cpp  settings.flags  settings_sync_usleep.flags  test_case.json
example/backup_request_c++/: CMakeLists.txt  client.cpp  echo.proto  server.cpp
example/baidu_proxy_and_generic_call/: CMakeLists.txt  client.cpp  proxy.cpp  server.cpp
example/benchmark_fb/: CMakeLists.txt  client.cpp  server.cpp  test.brpc.fb.cpp  test.brpc.fb.h  test.fbs  test_generated.h
example/bthread_tag_echo_c++/: CMakeLists.txt  client.cpp  echo.proto  server.cpp
example/build_with_bazel/: BUILD.bazel  WORKSPACE  brpc_workspace.bzl  leveldb.BUILD  openssl.BUILD  protobuf.BUILD  test.cc  zlib.BUILD
example/build_with_old_bazel/: .bazelrc  .bazelversion  BUILD.bazel  WORKSPACE  leveldb.BUILD  openssl.BUILD  zlib.BUILD
example/cancel_c++/: CMakeLists.txt  client.cpp  server.cpp
example/cascade_echo_c++/: CMakeLists.txt  COMAKE  Makefile  client.cpp  echo.proto  server.cpp
example/cmake/: BrpcExample.cmake
example/coroutine/: Makefile  coroutine_server.cpp  echo.proto
example/couchbase_c++/: CMakeLists.txt  Makefile  client.cpp  couchbase-cloud-cert.txt  couchbase_client.cpp  multithreaded_couchbase_client.cpp  traditional_brpc_couchbase_client.cpp
example/dynamic_partition_echo_c++/: CMakeLists.txt  Makefile  client.cpp  server.cpp  server_list
example/echo/: client.cpp  echo.proto  server.cpp
example/echo_c++/: AIbthreadPool.cpp  CMakeLists.txt  COMAKE  Makefile  baiban.cpp  bthreadPool.cpp  client.cpp  mytest.cpp  server.cpp
example/echo_c++_hulu_pbrpc/: CMakeLists.txt  Makefile  client.cpp  server.cpp
example/echo_c++_sofa_pbrpc/: CMakeLists.txt  COMAKE  Makefile  client.cpp  server.cpp
example/echo_c++_ubrpc_compack/: CMakeLists.txt  COMAKE  Makefile  client.cpp  echo.proto  server.cpp
example/echo_c++_unix_socket/: client.cpp  server.cpp
example/etcdctl_c++/: etcdctl.cpp
example/grpc_c++/: CMakeLists.txt  client.cpp  helloworld.proto  server.cpp
example/grpc_client/: CMakeLists.txt  greeter_client.cpp  helloworld.proto  http_server.cpp
example/http_c++/: CMakeLists.txt  COMAKE  Makefile  benchmark_http.cpp  http.proto  http_client.cpp  http_server.cpp
example/iouring_echo_c++/: CMakeLists.txt  client.cpp  server.cpp
example/memcache_c++/: CMakeLists.txt  COMAKE  Makefile  client.cpp
example/mongo_c++/: CMakeLists.txt  Makefile  mongo_press.cpp
example/multi_threaded_echo_c++/: CMakeLists.txt  COMAKE  Makefile  client.cpp  echo.proto  server.cpp
example/multi_threaded_echo_fns_c++/: CMakeLists.txt  COMAKE  Makefile  client.cpp  echo.proto  random_kill.sh  run_servers  server.cpp  server_list
example/multi_threaded_mcpack_c++/: CMakeLists.txt  Makefile  client.cpp  echo.proto  idl_options.proto  server.cpp
example/multi_threaded_ubrpc_compack_c++/: COMAKE  Makefile  client.cpp  echo.proto  server.cpp
example/mysql_c++/: CMakeLists.txt  mysql.proto  mysql_cli.cpp  mysql_go_press.go  mysql_press.cpp  mysql_stmt.cpp  mysql_tx.cpp  mysqlclient_press.cpp  server.cpp
example/nshead_extension_c++/: CMakeLists.txt  COMAKE  Makefile  client.cpp  server.cpp
example/nshead_pb_extension_c++/: CMakeLists.txt  Makefile  client.cpp  server.cpp
example/parallel_echo_c++/: CMakeLists.txt  Makefile  client.cpp  server.cpp
example/partition_echo_c++/: CMakeLists.txt  client.cpp  server.cpp  server_list
example/rdma_echo/: CMakeLists.txt  Makefile  client.cpp  server.cpp
example/rdma_performance/: CMakeLists.txt  Makefile  README.md  client.cpp  server.cpp  test.proto
example/redis_c++/: CMakeLists.txt  COMAKE  Makefile  client.cpp  redis_cli.cpp  redis_cluster_client.cpp  redis_press.cpp  redis_server.cpp
example/rpcz_echo_c++/: CMakeLists.txt  client.cpp  (+1 more)
src/: CMakeLists.txt  idl_options.proto
test/: BUILD  BUILD.bazel  CMakeLists.txt  COMAKE  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README_mysql_auth.md  abalist_unittest.cc  addressbook.proto  addressbook1.proto  addressbook_encode_decode.proto  addressbook_map.proto  aligned_memory_unittest.cc  allocator_unittest.cc  arena_unittest.cpp  at_exit_unittest.cc  atomicops_unittest.cc  baidu_thread_local_unittest.cpp  baidu_time_unittest.cpp  barrier_closure_unittest.cc  base64_unittest.cc  base64url_unittest.cc  base_unittest_main.cpp  big_endian_unittest.cc  bind_unittest.cc  bits_unittest.cc  bounded_queue_unittest.cc  brpc.pc  brpc_adaptive_class_unittest.cpp  brpc_alpn_protocol_unittest.cpp  brpc_auto_concurrency_limiter_unittest.cpp  brpc_block_pool_unittest.cpp  brpc_builtin_service_unittest.cpp  brpc_channel_unittest.cpp  brpc_checksum_unittest.cpp  brpc_circuit_breaker_unittest.cpp  brpc_controller_unittest.cpp  brpc_coroutine_unittest.cpp  brpc_couchbase_unittest.cpp  (+246 more)
tools/: BUILD  CMakeLists.txt  add_syntax_equal_proto2_to_all.sh  baidu_std.lua  bazel.rc  build_closure  clean_all_examples  clean_all_makefile  gdb_bthread_stack.py  get_brpc_revision.sh  get_brpc_version.sh  idl2proto  lldb_bthread_stack.py  make_all_examples  patch_from_baidu  patch_from_svn  pprof  print_gcc_version.cc  print_gcc_version.sh  probe  shflags  wireshark_baidu_std.lua
(+2332 files in other folders)
